[add] margin right checkbox

--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -92,7 +92,9 @@
 .container .filters .popover li {
 	margin: 5px 0 5px 0;
 }
-
+.popover li input {
+        margin-right: 10px;
+}
 @media screen and (max-width: 600px) {
 
 	.container .filters {
